# ODAT-SE-template

./: README.md  pyproject.toml
doc/en/source/: acknowledgement.rst  conf.py  contact.rst  index.rst  install.rst  introduction.rst  solver.rst
doc/en/source/tutorial/: booth.rst  himmelblau.rst  index.rst
doc/ja/source/: conf.py  contact.rst  index.rst  install.rst  introduction.rst  solver.rst
doc/ja/source/tutorial/: booth.rst  himmelblau.rst  index.rst
sample/booth/: booth.py  main.py
sample/himmelblau/: main.py
sample/linear_regression/: main.py
src/template/: Ackley.py  Himmelblau.py  LinearRegression.py  Quadratics.py  Quartics.py  Rosenbrock.py  function.py
tests/mapper/: simple.py
